# chiquito-language-server

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
client/: package-lock.json  package.json
client/src/: extension.ts
src/: chumsky.rs  completion.rs  jump_definition.rs  lib.rs  main.rs  range_factory.rs
syntaxes/: chiquito.tmLanguage.json
